...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddFoodActivity">

    <EditText
        android:id="@+id/etFoodName"
        android:layout_width="460dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Food Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLabels"
        android:layout_width="460dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Labels (comma separated)"
        android:inputType="textPersonName"
...
        android:rowCount="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLabels">

        <EditText
            android:id="@+id/etFat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Fat (g)"
            android:inputType="number" />

        <EditText
            android:id="@+id/etCarbs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Carbs (g)"
            android:inputType="number" />

        <EditText
            android:id="@+id/etProtein"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Protein (g)"
            android:inputType="number" />

    </GridLayout>

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="460dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Weight (g)"
        android:inputType="number"
...
    <GridLayout
        android:id="@+id/gridMicros"
        android:layout_width="460dp"
        android:layout_height="200dp"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toTopOf="@+id/btnAddFood"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWeight">

        <EditText
            android:id="@+id/etIron"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Iron (mg)"
...
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Zinc (mg)"
            android:inputType="number" />

        <EditText
            android:id="@+id/etVitA"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Vitamin A (mg)"
...
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Vitamin B12 (mg)"
            android:inputType="number" />

        <EditText
            android:id="@+id/etVitC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Vitamin C (mg)"
...
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Vitamin E (mg)"
            android:inputType="number" />

        <EditText
            android:id="@+id/etCalcium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Calcium (mg)"
...
