<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="450dp"
    android:layout_height="425dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:ignore="PrivateResource">

    <TextView
        android:id="@+id/tvPopUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adding Food: "
        android:textColor="@color/cardview_light_background"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/tvSpinnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Select a meal time:"
        android:textColor="@color/cardview_light_background"
        android:textSize="15dp" />

    <Spinner
        android:id="@+id/spnMealtimes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/mealtimes_array" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="Quantity"
        android:inputType="number"
        android:maxLength="2"
        android:textColorHint="@color/cardview_light_background" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Confirm" />

    <Button
        android:id="@+id/removeEdibleFromDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Remove Edible From App" />

    <Button
        android:id="@+id/updateMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="Update Meal" />

</LinearLayout>