...
                android:alpha=".6"
                android:text="Breakfast"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtBreakfastCals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="[Calories]"
...
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_exercise" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_food" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
...
